bk_ida/gccida/c3/elimination_effects
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/elimination_effects/src/reload1.c:3132:35: error: must use 'enum' tag to refer to type 'machine_mode'
void  elimination_effects( rtx x, machine_mode mem_mode) 
                                  ^
                                  enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/elimination_effects/src/reload1.c:3180:4: error: expected ';' after expression
rtx v49; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/elimination_effects/src/reload1.c:3180:5: error: use of undeclared identifier 'v49'
rtx v49; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/elimination_effects/src/reload1.c:3183:4: error: expected ';' after expression
rtx v52; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/elimination_effects/src/reload1.c:3183:5: error: use of undeclared identifier 'v52'
rtx v52; // rdx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/elimination_effects/src/reload1.c:3187:4: error: expected ';' after expression
rtx v56; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/elimination_effects/src/reload1.c:3187:5: error: use of undeclared identifier 'v56'
rtx v56; // rdx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/elimination_effects/src/reload1.c:3229:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v45 = ( __int64)v4[1]; 
                ^~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/elimination_effects/src/reload1.c:3243:1: error: use of undeclared identifier 'v49'
v49 = global_rtl[4]; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/elimination_effects/src/reload1.c:3246:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v50 = ( __int64)v4[1]; 
                ^~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/elimination_effects/src/reload1.c:3258:1: error: use of undeclared identifier 'v52'
v52 = v44[2].to_rtx; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/elimination_effects/src/reload1.c:3260:6: error: use of undeclared identifier 'v52'
if ( v52 == v53 && v53 != v49 ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/elimination_effects/src/reload1.c:3260:27: error: use of undeclared identifier 'v49'
if ( v52 == v53 && v53 != v49 ) 
                          ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/elimination_effects/src/reload1.c:3262:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v54 = ( __int64)v4[1]; 
                ^~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/elimination_effects/src/reload1.c:3263:38: error: expected expression
if ( *( _WORD *)v54 == 75 && *( rtx *)( v54 + 8) == v52 && ( v55 = *( _QWORD *)( v54 + 16), *( _WORD *)v55 == 54) ) 
                                     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/elimination_effects/src/reload1.c:3263:53: error: use of undeclared identifier 'v52'
if ( *( _WORD *)v54 == 75 && *( rtx *)( v54 + 8) == v52 && ( v55 = *( _QWORD *)( v54 + 16), *( _WORD *)v55 == 54) ) 
                                                    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/elimination_effects/src/reload1.c:3268:1: error: use of undeclared identifier 'v56'
v56 = v44[3].to_rtx; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/elimination_effects/src/reload1.c:3270:6: error: use of undeclared identifier 'v56'
if ( v56 == v57 && v57 != v49 ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/elimination_effects/src/reload1.c:3270:27: error: use of undeclared identifier 'v49'
if ( v56 == v57 && v57 != v49 ) 
                          ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/elimination_effects/src/obj/reload1.o] Error 1
